resolve div overflow on mobile

--- a/src/main/resources/static/css/fundamental.css
+++ b/src/main/resources/static/css/fundamental.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 .fullHeightOfParent {
-    height: 100%;
+    min-height: 100%;
 }
 
 .halfHeightOfParent {
